Clase 4-CSS: primera parte-> agregado de mas estilos-> centrado de imagen

--- a/estilos/cv_estilos.css
+++ b/estilos/cv_estilos.css
@@ -62,3 +62,15 @@ li, td, th{
     font-size: 20px;
     font-weight: 500;
 }
+.presentacion__foto{
+    width: 100%;
+    height: 50%;
+    padding: 5%;
+    text-align: center;
+}
+#presentacion__foto{
+    width: 20%;
+    border-radius: 50%;
+    border: 5px solid rgb(0, 75, 71);
+    text-align: center;
+}
