--- a/estilos/estilosBraian2.css
+++ b/estilos/estilosBraian2.css
@@ -25,16 +25,9 @@ a[href$=".com"]{/* signo $ indica que lo que sigue es lo que hay en comun entre 
 }
 .caja{
     background-color: rgb(29, 29, 236); /*si le agrego un 3er parametro, este sera la opacidad solo del COLOR de fondo*/
-    width: 120px; /* Si se usa '%', es segun el porcentaje del contenedor(el padre, main)*/
-    /*height: 200px; /* estos se mantendrian 'fijos*/
     border: 10px solid rgba(233, 32, 32, 0.925); /* pude ser: solid, dotted, dashed, etc*/
     padding: 20px;
-    /*margin: 30px 20px 10px 25px;*/
-    /*box-sizing: border-box; /*con esto, se incluye a border y padding a todo el alto y ancho del contenedor. Se lo suele especificar en el selector global*/
-    box-shadow: 20px 20px 30px blue;/*comportamiento similar al text shadow*/
-    opacity: 0.9;/*se aplica sobre TODO*/
     position: relative;
-    height: 50px;/*para explicacion align-content*/
 }
 .caja:hover{
     transform: scale(110%);
@@ -161,6 +154,13 @@ input:disabled{
     background-color: cornflowerblue;
     /*grid-template-rows: 100px 100px 100px; /*La cantidad de parametros representa a una fila*/
     grid-template-rows: 100px 100px 1fr;/*Mismo efecto que el de arriba*/
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr minmax(150px, 300px) 1fr;
     grid-gap: 40px;
+    grid-auto-rows: 500px;
+}
+.caja1{
+    /*grid-column-start: 1;
+    grid-column-end: 3;*/
+    /*grid-column: 1/ span 2;
+    grid-row: 1/ span 2;*/
 }
