TP5: Finalizacion, usando los archivos ch.hmtl, cv_estilos.css y cv.js

--- a/estilos/cv_estilos.css
+++ b/estilos/cv_estilos.css
@@ -74,3 +74,37 @@ li, td, th{
     border: 5px solid rgb(0, 75, 71);
     text-align: center;
 }
+
+/*   TP5         */
+.contactame__submit-btn{
+    --bs-btn-font-weight: 600;
+    --bs-btn-color: var(--bs-white);
+    --bs-btn-bg: var(--bd-violet);
+    --bs-btn-border-color: var(--bd-violet);
+    --bs-btn-border-radius: .5rem;
+    --bs-btn-hover-color: var(--bs-white);
+    --bs-btn-hover-bg: #{shade-color($bd-violet, 10%)};
+    --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
+    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+
+}
+.contactame {
+    color: black;
+    font-size: 22px;
+    font-weight: bolder;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    border: dashed rgb(24, 228, 228);
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    justify-content: space-between;
+}
+.mensaje__contactame {
+    background-color: rgb(24, 228, 228);
+}
+
+.contactame__submit {
+    margin-bottom: 10px;
+}
